..F....... [ZBX-21041] fixed broken layout of inherited macros table and added missing column name

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -6408,7 +6408,6 @@ z-select,
 	.table-col-parent-value,
 	.table-col-global-value {
 		width: 300px;
-		white-space: nowrap;
 	}
 }
 
