--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -6846,8 +6846,7 @@ z-select.z-select-host-interface li[disabled] .description:not(:empty),
 .host-macros-table .table-col-template-value,
 .host-macros-table .table-col-parent-value,
 .host-macros-table .table-col-global-value {
-  width: 300px;
-  white-space: nowrap; }
+  width: 300px; }
 
 .active-readonly[readonly] {
   color: #ffffff;
